@@ -1,3 +1,7 @@
+** v4.02, 21.11.2018**
+* Fixed an error in one of my ClassColor function. #38
+* Fixed an error with DeJaCharacterStats. #39
+
 ** v4.01, 20.11.2018**
 * Small DPS/Tank Layout adjustments.
 * Take account to the new ElvUI functions. (aborb etc.)
