@@ -1,3 +1,7 @@
+[b][color=orange]v4.02[/color], 21.11.2018[/b][list]
+[*]Fixed an error in one of my ClassColor function. #38
+[*]Fixed an error with DeJaCharacterStats. #39[/list]
+
 [b][color=orange]v4.01[/color], 20.11.2018[/b][list]
 [*]Small DPS/Tank Layout adjustments.
 [*]Take account to the new ElvUI functions. (aborb etc.)
